# idto

./: .bazelrc  .clang-format  .dockerignore  .gitignore  BUILD.bazel  CMakeLists.txt  Dockerfile  LICENSE  README.md  WORKSPACE  pyproject.toml  setup.py  spinner_mpc_example.py  spinner_python_example.py
bindings/: BUILD.bazel  adder.cc  adder_test.py  example.cc  example_test.py  problem_definition.cc  trajectory_optimizer_py.cc  trajectory_optimizer_solution_py.cc  trajectory_optimizer_test.py
bindings/test/: problem_definition_test.py  solver_parameters_test.py  trajectory_optimizer_solution_test.py  trajectory_optimizer_stats_test.py  trajectory_optimizer_test.py
common/: BUILD.bazel  find_resource.cc  profiler.cc  profiler.h
common/test/: profiler_test.cc
examples/: 2dof_spinner.cc  BUILD.bazel  CMakeLists.txt  acrobot.cc  airhockey.cc  allegro_hand.cc  block_push.cc  block_push.yaml  dual_jaco.cc  example_base.cc  example_base.h  floating_box.cc  frictionless_spinner.cc  hopper.cc  hopper.yaml  jaco.cc  jaco_ball.cc  kuka.cc  mini_cheetah.cc  mpc_controller.cc  mpc_controller.h  pd_plus_controller.cc  pd_plus_controller.h  pendulum.cc  punyo.cc  punyo_hug.cc  punyo_hug.yaml  spinner.cc  wall_ball.cc  yaml_config.h
examples/acrobot/: BUILD.bazel  CMakeLists.txt  acrobot.cc  acrobot.yaml  test.yaml
examples/airhockey/: BUILD.bazel  CMakeLists.txt  airhockey.cc  test.yaml
examples/allegro_hand/: BUILD.bazel  CMakeLists.txt  allegro_hand.cc  allegro_hand_upside_down.yaml  test.yaml
examples/dual_jaco/: BUILD.bazel  CMakeLists.txt  dual_jaco.cc  dual_jaco.yaml  test.yaml
examples/hopper/: BUILD.bazel  CMakeLists.txt  hopper.cc  hopper.yaml  test.yaml
examples/jaco/: BUILD.bazel  CMakeLists.txt  jaco.cc  jaco.yaml  test.yaml
examples/jaco_ball/: BUILD.bazel  CMakeLists.txt  jaco_ball.cc  jaco_ball.yaml  test.yaml
examples/kuka/: BUILD.bazel  CMakeLists.txt  kuka.cc  test.yaml
examples/mini_cheetah/: BUILD.bazel  CMakeLists.txt  mini_cheetah.cc  mini_cheetah.yaml  test.yaml
examples/models/: box_15cm_hydro.sdf  hopper.urdf  mini_cheetah_with_ground.urdf  spinner_sphere.urdf
examples/pendulum/: BUILD.bazel  CMakeLists.txt  pendulum.cc  pendulum.yaml  test.yaml
examples/punyo/: BUILD.bazel  CMakeLists.txt  punyo.cc  punyo.yaml  test.yaml
examples/spinner/: BUILD.bazel  CMakeLists.txt  spinner.cc  spinner.yaml  test.yaml
idto/traj_opt/: BUILD.bazel  cc_py.cc  convergence_criteria_tolerances.h  inverse_dynamics_partials.cc  inverse_dynamics_partials.h  penta_diagonal_matrix.cc  penta_diagonal_matrix.h  penta_diagonal_solver.h  penta_diagonal_to_petsc_matrix.cc  penta_diagonal_to_petsc_matrix.h  problem_definition.h  solver_parameters.h  trajectory_optimizer.cc  trajectory_optimizer.h  trajectory_optimizer_solution.cc  trajectory_optimizer_solution.h  trajectory_optimizer_state.cc  trajectory_optimizer_state.h  trajectory_optimizer_workspace.cc  trajectory_optimizer_workspace.h  velocity_partials.cc  velocity_partials.h  warm_start.h
idto/traj_opt/examples/: 2dof_spinner.cc  BUILD.bazel  acrobot.cc  acrobot.yaml  airhockey.cc  airhockey.yaml  allegro_hand.cc  dual_jaco.cc  example_base.cc  example_base.h  (+16 more)
optimizer/: BUILD.bazel  CMakeLists.txt  convergence_criteria_tolerances.h  inverse_dynamics_partials.cc  inverse_dynamics_partials.h  penta_diagonal_matrix.cc  penta_diagonal_matrix.h  penta_diagonal_solver.h  problem_definition.h  solver_parameters.h  trajectory_optimizer.cc  trajectory_optimizer.h  trajectory_optimizer_solution.cc  trajectory_optimizer_solution.h  trajectory_optimizer_state.cc  trajectory_optimizer_state.h  trajectory_optimizer_workspace.cc  trajectory_optimizer_workspace.h  velocity_partials.cc  velocity_partials.h  warm_start.h
optimizer/examples/: BUILD.bazel  acrobot.cc  airhockey.cc  block_push.cc  example_base.cc  jaco_ball.cc  kuka.cc  mpc_controller.cc  pd_plus_controller.cc  pendulum.cc  spinner.cc  wall_ball.yaml
optimizer/test/: penta_diagonal_solver_test.cc  trajectory_optimizer_test.cc
python_bindings/: CMakeLists.txt  find_resource_py.cc  problem_definition_py.cc  pyidto.cc  solver_parameters_py.cc  trajectory_optimizer_py.cc  trajectory_optimizer_solution_py.cc  trajectory_optimizer_stats_py.cc
python_bindings/test/: find_resource_test.py  problem_definition_test.py  solver_parameters_test.py  test_toy_example.py  trajectory_optimizer_solution_test.py  trajectory_optimizer_stats_test.py  trajectory_optimizer_test.py  warm_start_test.py
src/examples/: BUILD.bazel  CMakeLists.txt  example_base.h  yaml_config.h
src/optimizer/: CMakeLists.txt  inverse_dynamics_partials.cc  penta_diagonal_matrix.cc  trajectory_optimizer.cc
src/pyidto/: CMakeLists.txt  my_fun_bindings.cc  my_fun_bindings_test.py
traj_opt/: BUILD.bazel  cc_py.cc  convergence_criteria_tolerances.h  inverse_dynamics_partials.cc  inverse_dynamics_partials.h  penta_diagonal_matrix.cc  penta_diagonal_matrix.h  penta_diagonal_solver.h  penta_diagonal_to_petsc_matrix.cc  penta_diagonal_to_petsc_matrix.h  problem_definition.h  solver_parameters.h  trajectory_optimizer.cc  trajectory_optimizer.h  trajectory_optimizer_solution.cc  trajectory_optimizer_solution.h  trajectory_optimizer_state.cc  trajectory_optimizer_state.h  trajectory_optimizer_workspace.cc  trajectory_optimizer_workspace.h  velocity_partials.cc  warm_start.h
traj_opt/examples/: 2dof_spinner.cc  2dof_spinner.yaml  BUILD.bazel  acrobot.cc  airhockey.cc  allegro_hand.cc  allegro_hand.yaml  allegro_hand_upside_down.yaml  block_push.cc  dual_jaco.cc  example_base.cc  example_base.h  floating_box.cc  frictionless_spinner.cc  hopper.cc  jaco.cc  jaco.yaml  jaco_ball.cc  kuka.cc  kuka.yaml  mini_cheetah.cc  mini_cheetah.yaml  mpc_controller.cc  mpc_controller.h  pd_plus_controller.cc  pd_plus_controller.h  pendulum.cc  pendulum.yaml  punyo_hug.cc  spinner.cc  spinner.yaml  wall_ball.cc  yaml_config.h
traj_opt/scripts/: compare_convergence.py  plot_convergence_data.py
traj_opt/test/: penta_diagonal_solver_test.cc  penta_diagonal_to_petsc_matrix_test.cc  trajectory_optimizer_test.cc
(+104 files in other folders)
