# SPDX-License-Identifier: MIT-0

# This is an empty BUILD file, to ensure that this project's root directory is
# a Bazel package.

exports_files([".bazelproject"])

load("//tools:shared_library.bzl", "idto_cc_shared_library")

idto_cc_shared_library(
    name = "idto_shared_library",
    deps = ["//utils", "//optimizer"],
    visibility = ["//visibility:public"],
)

idto_cc_shared_library(
    name = "idto_shared_library_examples",
    deps = [":idto_shared_library", "//examples"],
    visibility = ["//visibility:public"],
)
