package(default_visibility = ["//visibility:public"])

load("//tools/lint:lint.bzl", "add_lint_tests")
load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

pybind_extension(
    name = "problem_definition",  # This name should match the *.so below
    srcs = ["problem_definition.cc"],
    deps = [
        "//optimizer:problem_definition",
    ]
)
py_library(
    name = "problem_definition",
    data = [":problem_definition.so"],
)
py_test(
    name = "problem_definition_test",
    srcs = ["problem_definition_test.py"],
    deps = [
        ":problem_definition"
    ],
)

add_lint_tests()

