# -*- mode: python -*-
# vi: set ft=python :

package(default_visibility = ["//visibility:public"])

load("//tools:test.bzl", "cc_googletest")

cc_library(
    name = "googletest_main",
    testonly = True,
    srcs = ["@drake//common/test_utilities:drake_cc_googletest_main.cc"],
    linkstatic = True,
    deps = [
        "@gflags",
        "@gtest//:without_main",
    ],
)

cc_library(
    name = "profiler",
    srcs = ["profiler.cc"],
    hdrs = ["profiler.h"],
    deps = [
        "@drake//common",
    ],
)

cc_library(
    name = "find_resource",
    srcs = ["find_resource.cc"],
    hdrs = ["find_resource.h"],
    data = [
        # Ensure that our resource directory always exists, even if some
        # particular program never declares any data dependencies.
        "//:.bazelproject",
    ],
    deps = [
        "@drake//common:essential",
        "@drake//common:find_runfiles",
    ],
)

cc_googletest(
    name = "profiler_test",
    deps = [":profiler"],
    srcs = ["test/profiler_test.cc"],
)
