# -*- python -*-

package(default_visibility = ["//visibility:public"])

load("//tools:shared_library.bzl", "idto_cc_shared_library")

cc_binary(
    name = "acrobot",
    srcs = ["acrobot.cc"],
    data = [
        ":acrobot.yaml",
        "@drake//examples/acrobot:models",
    ],
    deps = [
        ":example_base",
        "//utils:find_resource",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
    ],
)

cc_binary(
    name = "block_push",
    srcs = ["block_push.cc"],
    data = [
        ":block_push.yaml",
    ],
    deps = [
        ":example_base",
        "//utils:find_resource",
        "@drake//multibody/plant",
    ],
)

cc_binary(
    name = "hopper",
    srcs = ["hopper.cc"],
    data = [
        ":hopper.yaml",
        ":models",
    ],
    deps = [
        ":example_base",
        "//utils:find_resource",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
    ],
)

cc_binary(
    name = "mini_cheetah",
    srcs = ["mini_cheetah.cc"],
    data = [
        ":mini_cheetah.yaml",
        ":models",
    ],
    deps = [
        ":example_base",
        "//utils:find_resource",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
        "@gflags",
    ],
)

cc_binary(
    name = "pendulum",
    srcs = ["pendulum.cc"],
    data = [
        ":pendulum.yaml",
        "@drake//examples/pendulum:models",
    ],
    deps = [
        ":example_base",
        "//utils:find_resource",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
    ],
)

cc_binary(
    name = "punyo_hug",
    srcs = ["punyo_hug.cc"],
    data = [
        ":models",
        ":punyo_hug.yaml",
    ],
    deps = [
        ":example_base",
        "//utils:find_resource",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
    ],
)

cc_binary(
    name = "dual_jaco",
    srcs = ["dual_jaco.cc"],
    data = [
        ":dual_jaco.yaml",
        ":models",
        "@drake//manipulation/models/jaco_description:models",
    ],
    deps = [
        ":example_base",
        "//utils:find_resource",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
    ],
)

cc_binary(
    name = "jaco",
    srcs = ["jaco.cc"],
    data = [
        ":jaco.yaml",
        ":models",
        "@drake//manipulation/models/jaco_description:models",
    ],
    deps = [
        ":example_base",
        "//utils:find_resource",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
    ],
)

cc_binary(
    name = "jaco_ball",
    srcs = ["jaco_ball.cc"],
    data = [
        ":jaco_ball.yaml",
        ":models",
        "@drake//manipulation/models/jaco_description:models",
    ],
    deps = [
        ":example_base",
        "//utils:find_resource",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
    ],
)

cc_binary(
    name = "kuka",
    srcs = ["kuka.cc"],
    data = [
        ":kuka.yaml",
        ":models",
        "@drake//manipulation/models/iiwa_description:models",
    ],
    deps = [
        ":example_base",
        "//utils:find_resource",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
    ],
)

cc_binary(
    name = "allegro_hand",
    srcs = ["allegro_hand.cc"],
    data = [
        ":allegro_hand.yaml",
        ":allegro_hand_upside_down.yaml",
        ":models",
        "@drake//manipulation/models/allegro_hand_description:models",
    ],
    deps = [
        ":example_base",
        "//utils:find_resource",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
        "@gflags",
    ],
)

cc_binary(
    name = "airhockey",
    srcs = ["airhockey.cc"],
    data = [
        ":airhockey.yaml",
    ],
    deps = [
        ":example_base",
        "//utils:find_resource",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
    ],
)

cc_binary(
    name = "spinner",
    srcs = ["spinner.cc"],
    data = [
        ":models",
        ":spinner.yaml",
    ],
    deps = [
        ":example_base",
        "//utils:find_resource",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
    ],
)

idto_cc_shared_library(
    name = "mpc_controller",
    srcs = ["mpc_controller.cc"],
    hdrs = ["mpc_controller.h"],
    deps = [
        "//optimizer:problem_definition",
        "//optimizer:trajectory_optimizer",
        "//optimizer:warm_start",
        "@drake//common/trajectories:piecewise_polynomial",
        "@drake//multibody/plant",
        "@drake//systems/framework:diagram",
        "@drake//systems/framework:leaf_system",
        "@drake//systems/framework:vector",
    ],
)

idto_cc_shared_library(
    name = "pd_plus_controller",
    srcs = ["pd_plus_controller.cc"],
    hdrs = ["pd_plus_controller.h"],
    deps = [
        "@drake//systems/framework:leaf_system",
        "@drake//systems/framework:vector",
    ],
)

idto_cc_shared_library(
    name = "example_base",
    srcs = ["example_base.cc"],
    hdrs = ["example_base.h"],
    deps = [
        ":mpc_controller",
        ":pd_plus_controller",
        ":yaml_config",
        "//utils:find_resource",
        "//optimizer:problem_definition",
        "//optimizer:trajectory_optimizer",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
        "@drake//systems/analysis:simulator",
        "@drake//systems/framework:diagram",
        "@drake//systems/primitives:constant_vector_source",
        "@drake//systems/primitives:discrete_time_delay",
        "@drake//visualization:visualization_config_functions",
    ],
)

idto_cc_shared_library(
    name = "yaml_config",
    srcs = [],
    hdrs = ["yaml_config.h"],
    deps = [
        "@drake//common:essential",
        "@drake//common/yaml",
    ],
)

idto_cc_shared_library(
  name = "examples",
  deps = [
    ":example_base",
    ":mpc_controller",
    ":pd_plus_controller",
    ":yaml_config",
  ],
)
