# -*- python -*-

package(default_visibility = ["//visibility:public"])

load("//tools/lint:lint.bzl", "add_lint_tests")

cc_binary(
    name = "airhockey",
    srcs = ["airhockey.cc"],
    data = [
        ":airhockey.yaml",
    ],
    deps = [
        "//examples:example_base",
        "//utils:find_resource",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
        "@gflags"
    ],
)

cc_test(
    name = "airhockey_test",
    srcs = ["airhockey.cc"],
    args = ["--test"],
    data = [
        ":airhockey.yaml",
    ],
    deps = [
        "//examples:example_base",
        "//utils:find_resource",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
        "@gflags"
    ],
)

add_lint_tests()
