# -*- python -*-

package(default_visibility = ["//visibility:public"])

load("//tools/lint:lint.bzl", "add_lint_tests")

cc_binary(
    name = "allegro_hand",
    srcs = ["allegro_hand.cc"],
    data = [
        ":allegro_hand.yaml",
        ":allegro_hand_upside_down.yaml",
        "//examples:models",
        "@drake//manipulation/models/allegro_hand_description:models",
    ],
    deps = [
        "//examples:example_base",
        "//utils:find_resource",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
        "@gflags",
    ],
)

cc_test(
    name = "allegro_hand_test",
    srcs = ["allegro_hand.cc"],
    args = ["--test"],
    data = [
        ":allegro_hand.yaml",
        "//examples:models",
        "@drake//manipulation/models/allegro_hand_description:models",
    ],
    deps = [
        "//examples:example_base",
        "//utils:find_resource",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
        "@gflags",
    ],
)

add_lint_tests()
