# -*- python -*-

package(default_visibility = ["//visibility:public"])

load("//tools/lint:lint.bzl", "add_lint_tests")

cc_binary(
    name = "dual_jaco",
    srcs = ["dual_jaco.cc"],
    data = [
        ":dual_jaco.yaml",
        "//examples:models",
        "@drake//manipulation/models/jaco_description:models",
    ],
    deps = [
        "//examples:example_base",
        "//utils:find_resource",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
        "@gflags"
    ],
)

cc_test(
    name = "dual_jaco_test",
    srcs = ["dual_jaco.cc"],
    args = ["--test"],
    data = [
        ":dual_jaco.yaml",
        "//examples:models",
        "@drake//manipulation/models/jaco_description:models",
    ],
    deps = [
        "//examples:example_base",
        "//utils:find_resource",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
        "@gflags"
    ],
)

add_lint_tests()
