# -*- python -*-

package(default_visibility = ["//visibility:public"])

load("//tools:shared_library.bzl", "idto_cc_shared_library")
load("//tools/lint:lint.bzl", "add_lint_tests")

cc_binary(
    name = "hopper",
    srcs = ["hopper.cc"],
    data = [
        ":hopper.yaml",
        "//examples:models",
    ],
    deps = [
        "//examples:example_base",
        "//utils:find_resource",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
    ],
)

add_lint_tests()
