# -*- python -*-

package(default_visibility = ["//visibility:public"])

load("//tools/lint:lint.bzl", "add_lint_tests")

cc_binary(
    name = "hopper",
    srcs = ["hopper.cc"],
    data = [
        ":hopper.yaml",
        "//examples:models",
    ],
    deps = [
        "//examples:example_base",
        "//utils:find_resource",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
        "@gflags"
    ],
)

cc_test(
    name = "hopper_test",
    srcs = ["hopper.cc"],
    args = ["--test"],
    data = [
        ":hopper.yaml",
        "//examples:models",
    ],
    deps = [
        "//examples:example_base",
        "//utils:find_resource",
        "@drake//multibody/parsing",
        "@drake//multibody/plant",
        "@gflags"
    ],
)

add_lint_tests()
